[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]

[node name="Level" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="LevelTime" type="Label" parent="."]
margin_left = 308.0
margin_right = 320.0
margin_bottom = 10.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "10"

[node name="LevelEnd" type="Panel" parent="."]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="LevelEnd"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LevelEnd/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 170.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="LevelEnd/MarginContainer/VBoxContainer"]
margin_left = 33.0
margin_right = 247.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Performance Review"

[node name="BodyText" type="RichTextLabel" parent="LevelEnd/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 136.0
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Completion time: %s
Workers processed: %s

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at urna at ipsum aliquam facilisis. Sed egestas ultrices tempor. Sed ut tellus eu nisl dignissim euismod in et risus. Aenean eu tincidunt sem, vel porta sem."
scroll_active = false

[node name="NextLevel" type="Button" parent="LevelEnd/MarginContainer/VBoxContainer"]
margin_left = 106.0
margin_top = 144.0
margin_right = 173.0
margin_bottom = 160.0
size_flags_horizontal = 4
text = "Next Level"

[connection signal="pressed" from="LevelEnd/MarginContainer/VBoxContainer/NextLevel" to="." method="next_level"]
